<resources>
    <string name="app_name">firebase</string>
    <string name="username">username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="input_username">enter_username</string>
    <string name="Go">Go</string>
    <string name="todo">TODO</string>
    <string name="img_4">image_of_facemask</string>
    <string name="img5">image_of_goggles</string>
    <string name="send">Send</string>
    <string name="user_list">User List</string>
    <string name="users_list">Users List</string>
    <string name="listView">user_list_please_choose_the_user_you_want_to_sent_emoji</string>
    <string name="choose">Choose</string>
    <string name="sent">SENT</string>
    <string name="selectEmojiSent">Please select the emoji you want to sent</string>
    <string name="send_history">Send History</string>
    <string name="emoji_2">emoji_2</string>
    <string name="emoji_1">emoji_1</string>
    <string name="emoji_3">emoji_3</string>
    <string name="emoji_4">emoji_4</string>
    <string name="history">history</string>

</resources>